--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,8 +5,8 @@ services:
     image: amirtheahmed/itjobsmeter_frontend:latest
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.coming-soon.rule=Host(`itjobsmeter.amirtheahmed.dev`, `www.itjobsmeter.amirtheahmed.dev`)"
-      - "traefik.http.routers.coming-soon.entrypoints=https"
+      - "traefik.http.routers.itjobsmeter_frontend.rule=Host(`itjobsmeter.amirtheahmed.dev`, `www.itjobsmeter.amirtheahmed.dev`)"
+      - "traefik.http.routers.itjobsmeter_frontend.entrypoints=https"
     environment:
       - NGINX_PORT=80
     networks:
