ci: Update GitHub Actions and docker-compose for deployment- Add `git pull` step in GitHub Actions workflow to ensure the latest code is deployed.- Simplify Traefik routing rule in `docker-compose.prod.yml` by removing `www` subdomain.- Update GitHub link in `FooterSocial` component to point to user profile instead of specific repo

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -74,6 +74,7 @@ jobs:
           script: |
             docker pull amirtheahmed/itjobsmeter_frontend:latest &&
             cd /home/amirtheahmed/apps/itjobsmeter_frontend &&
+            git pull &&
             docker-compose -f docker-compose.prod.yml down &&
             docker-compose -f docker-compose.prod.yml up --build -d    
 
